Working (!) SpigotMC server